--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,33 +19,43 @@ a {
   text-decoration: none;
 }
 
+ul {
+  list-style-type: none;
+}
+
+.button {
+  border-radius: 4px;
+  color: #FFFFFF;
+  text-align: center;
+  text-transform: uppercase;
+  background-color: #756157;
+  padding: 8px 50px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 36px;
+}
+
 /* Header */
 
-.main-header {
+.index-header {
   background-color: #FFFFFF;
   color: #000000;
   font-family: "PT Sans", sans-serif;
   font-weight: 700;
-}
-
-.navigation-header {
+  text-align: center;
+  text-transform: uppercase;
   font-size: 20px;
   line-height: 24px;
-  text-align: center;
 }
 
 .button-navigation {
   font-size: 16px;
   line-height: 20px;
-  color: #FFFFFF;
-  text-align: center;
 }
 
 .notification-badge {
   font-size: 10px;
-  font-weight: 400;
   line-height: 10px;
-  text-align: center;
 }
 
 /* Body */
@@ -56,18 +66,73 @@ body {
   font-weight: 400;
   line-height: 21px;
   color: #000000;
-  background: #83B3D31F;
+  background-color: #83B3D31F;
 }
 
-.advantages-title {
+.hero {
+  background-image: url("../img/index/hero/index-background.jpg");
+  background-size: 100% auto;
+  background-repeat: no-repeat;
+  text-align: center;
+}
+
+.title {
   font-size: 30px;
   font-weight: 700;
   line-height: 36px;
   text-align: center;
+  text-transform: uppercase;
+
 }
 
-.advantages-subtitle {
+.subtitle  {
   font-size: 22px;
   line-height: 26px;
   text-align: center;
+}
+
+.advantages-list {
+  width: 400px;
+  height: 385px;
+  text-align: center;
+}
+
+.advantages-list h3 {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28px;
+  text-transform: uppercase;
+}
+
+.advantages-list li:nth-child(3) {
+  background-color: #83B3D333;
+}
+
+.advantages-list li:nth-child(1),
+.advantages-list li:nth-child(4) {
+  background-color: #82B3D3;
+  color: #FFFFFF;
+}
+
+.infrastructure-list h3 {
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 28px;
+  text-transform: uppercase;
+}
+
+.infrastructure-list {
+  text-align: center;
+}
+
+.infrastructure-list li:nth-child(1),
+.infrastructure-list li:nth-child(3) {
+  background-color: #82B3D3;
+}
+
+.subscribe {
+  color:#FFFFFF;
+  background-image: url("../img/index/subscribe-background.jpg");
+  background-size: 100% auto;
+  background-repeat: no-repeat;
 }
